manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-add-task-deployment
spec:
  replicas: 1
  selector:
    matchExpressions: 
      - key: app
        operator: In
        values: 
        - todo-add-task
  strategy: 
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: todo-add-task
    spec:
      containers:
      - name: add-task
        image: subho9407/todobackend-add_task
        ports:
        - containerPort: 8000
