manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: add-task-ingress
spec: 
  ingressClassName: nginx
  rules: 
  - host: add-task.subhojitgoswami.cloud
    http: 
      paths: 
      - backend: 
          service: 
            name: todo-add-task-svc
            port: 
              number: 80
        path: /
        pathType: Prefix
